2009-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{gray.c, rgb.c, cymk.c}: Work toward supporting the
	-endian option.  Not working properly yet.

	* magick/enum_strings.c (EndianTypeToString): New function.
	(InterlaceTypeToString): New function.

2009-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c: Stripped out unused code.

	* www/wand: Added formatted Wand API documentation.

	* scripts/format_c_api_doc.py: Now supports --include-rst option.

2009-03-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageBoundingBox): If we fail to find a
	smaller bounding box, then the returned bounding box is the entire
	image.

2009-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/magick/magick_config.h.in: Provide configuration
	access to the DisableSlowOpenMP define.

	* PerlMagick/t/read.t: Add a test for HRZ Slow scan TV.

	* magick/pixel_cache.c (ModifyCache): Set image 'taint' flag and
	clear monochrome and grayscale flags when pixels are accessed
	read/write rather than at sync.

	* coders/Makefile.am (MAGICK_CODER_SRCS): Add coders/hrz.c to
	build.

2009-01-27  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/hrz.c: New HRZ reader for slow scan TV.

2009-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Make error handling more robust.

	* magick/pixel_cache.c (SetNexus): Return a run-time error to
	invoking code rather than exiting the program if the pixel staging
	buffer fails to be allocated.

2009-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Allow the user to force the
	returned image to be TrueColor type for min-is-white and
	min-is-black TIFF files.  Previous to this, bilevel TIFF files
	were always returned as PseudoClass.

2009-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c, coders/pnm.c: Fix several race conditions
	reported by Julian Seward.